Refactor: Use immutable structures and records for model classes; Update unit tests accordingly